--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,15 @@
 ---
+import BlogPost from "../components/BlogPost.astro";
 import Layout from "../layouts/Layout.astro";
-
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "My Astro Learning Blog";
 ---
 
 <Layout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li>
+    {
+      allPosts.map((post: any) => <BlogPost post={post} />)
+    }
   </ul>
 </Layout>
