Integrate Preact and RSS support, update configuration, and enhance blog components. Remove Welcome component, add tags to navigation, and improve Markdown post layout with dynamic date formatting and tag display.

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -2,4 +2,4 @@
 const { post } = Astro.props;
 ---
 
-<li><a href={post.url}>{post.frontmatter.title}</a></li>
+<li><a href={`/posts/${post.id}/`}>{post.data.title}</a></li>
