--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,6 @@ import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
 
 const pageTitle = "About Page";
-
 const identity = {
   firstName: "Gerardo",
   lastName: "Sanchez",
@@ -15,7 +14,7 @@ const identity = {
 const skills = ["Astro", "React", "Node.js", "Typescript", "Tailwind CSS"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy";
