--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,15 @@
 ---
-import BlogPost from "../components/BlogPost.astro";
+import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+import BlogPost from "../components/BlogPost.astro";
+
 const pageTitle = "My Astro Learning Blog";
+const allPosts = await getCollection("blog");
 ---
 
 <Layout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    {
-      allPosts.map((post: any) => <BlogPost post={post} />)
-    }
+    {allPosts.map((post: any) => <BlogPost post={post} />)}
   </ul>
 </Layout>
