--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,14 @@
 ---
 import Hamburger from "./Hamburger.astro";
 import Navigation from "./Navigation.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 const { title } = Astro.props;
 ---
 
 <header>
   <nav>
     <Hamburger />
+    <ThemeIcon />
     <Navigation />
   </nav>
   <h1>{title}</h1>
