--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Greeting from '../components/Greeting.jsx';
 const pageTitle = "Home Page";
 ---
 <Layout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
+  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+
 </Layout>
